<resources>
    <string name="app_name">Earthquake</string>
    <string name="username_tip">昵称/邮箱/手机号码</string>
    <string name="password_tip">password</string>
    <string name="register">Sign in</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="forget">Forget your password?</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
