<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/voc"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true"
        android:layout_width="64dp"
        android:layout_height="64dp" />
    <EditText
        android:id="@+id/username"
        android:layout_centerHorizontal="true"
        android:hint="@string/username_tip"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password"
        android:hint="@string/password_tip"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:password="true"
        android:layout_below="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:textSize="25dp"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/forget"
        android:textSize="15dp"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forget"
        android:layout_below="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/register"
        android:clickable="true"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/register"
        android:layout_below="@+id/forget"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>